# GeneticsLD

./: .gitignore  GeneticsLD.R  pullin.sh
GeneticsLD/: DESCRIPTION  NAMESPACE
GeneticsLD/R/: RcppExports.R  Rdata.R  parametrizer.R  parametrizerTestModule.R  standardizationExp.R  visualization.R  zzz.R
GeneticsLD/src/: parameter.cpp  parameter.h  parameterhelper.cpp  parameterhelper.h  parametrizer.cpp  parametrizer.h  parametrizerRcppModule.cpp  parametrizerrcpp.cpp  parametrizerrcpp.h  parametrizerrcpp_module.h
R/: visualization.R
haplotypes_cpp/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  haplotypes_cpp  haplotypes_cpp.kdev4  main.cpp  parameter.cpp  parameter.h  parameterhelper.cpp  parameterhelper.h  parametrizer.cpp  parametrizer.h  parametrizerrcpp.cpp  parametrizerrcpp.h  parametrizerrcpp_module.h
haplotypes_cpp/.kdev4/: _custom.kdev4  haplotypes_cpp.kdev4
